stages/stage2/set3-gateway-nodeport/k8s/networkpolicies/apps-00-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: apollo-airlines-apps
spec:
  podSelector: {}
  policyTypes:
    - Ingress
